Add user buttons to doccument

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class = header>
+        <button>Change Grid</button>
+        <button>Erase</button>
+    </div>
     <div class="container">
 
     </div>
