Create user buttons and begin work on change grid function

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class = header>
-        <button>Change Grid</button>
-        <button>Erase</button>
+        <button id="change-grid">Change Grid</button>
+        <button id="erase">Erase</button>
     </div>
     <div class="container">
 
