--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="change-grid">Change Grid</button>
         <button id="erase">Erase</button>
     </div>
-    <div class="container">
+    <div class="container" id="containerID">
 
     </div>
 </body>
